--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit>=1.28
-st-gsheets-connection
-google.oauth2.service_account
-googleapiclient.discovery
+streamlit
+pandas
+numpy
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+gspread
+streamlit_gsheets
